Fix Issue of Overlapping drop menu
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@1426 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/global-hds-navigation.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/global-hds-navigation.css
@@ -439,7 +439,7 @@ HDS Global Header and Navigation
     background: #fff;
     width: 100%;
     left: 0;
-    z-index: 999;
+    z-index: 99999;
     display: none;
     -webkit-box-shadow: 0px 2px 5px 0px rgba(194,194,194,1);
     -moz-box-shadow: 0px 2px 5px 0px rgba(194,194,194,1);
