--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/partner-lp.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/partner-lp.css
@@ -122,7 +122,7 @@
     left: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.3);
-    z-index: 9999;
+    z-index: auto;
 }
 
 #partnerpageBar.PagerBar .name{
